[gd_scene load_steps=21 format=2]

[ext_resource path="res://Scripts/MenuScripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://OtherHolder/MenuBG01.01.png" type="Texture" id=2]
[ext_resource path="res://OtherHolder/rm-albion/RM Albion font bigger.tres" type="DynamicFont" id=3]
[ext_resource path="res://OtherHolder/rm-albion/RM Albion font medium.tres" type="DynamicFont" id=4]
[ext_resource path="res://Scenes/MenuScenes/Options.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/MenuScenes/Credits.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/LevelScenes/BaseScenes/Castle01ForMenus.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/PlayerScenes/ForMenusBackground/Player01ForMenus.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/PlayerScenes/ForMenusBackground/Player02ForMenus.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/PlayerScenes/ForMenusBackground/Player03ForMenus.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/PlayerScenes/ForMenusBackground/Player04ForMenus.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/PlayerScenes/ForMenusBackground/Player05ForMenus.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scenes/PlayerScenes/ForMenusBackground/Player06ForMenus.tscn" type="PackedScene" id=13]
[ext_resource path="res://Scenes/PlayerScenes/ForMenusBackground/SorcerorForMenus.tscn" type="PackedScene" id=14]
[ext_resource path="res://Scenes/PlayerScenes/ForMenusBackground/ZombieMaleForMenus.tscn" type="PackedScene" id=15]
[ext_resource path="res://Scenes/PlayerScenes/ForMenusBackground/ZombieFemaleForMenus.tscn" type="PackedScene" id=16]
[ext_resource path="res://Music/Unholy Knight.ogg" type="AudioStream" id=17]

[sub_resource type="CylinderMesh" id=1]

custom_aabb = AABB( 0, 0, 0, 0, 0, 0 )
top_radius = 1.0
bottom_radius = 1.0
height = 2.0
radial_segments = 64
rings = 4

[sub_resource type="Animation" id=2]

resource_name = "MainMenuCamAnim"
length = 60.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:transform")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 15, 22.5, 30, 45, 60 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 14.6385 ), Transform( -4.37114e-008, 0, 1, 0, 1, 0, -1, 0, -4.37114e-008, 0, 0, 14.6385 ), Transform( -0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, -0.707107, 0, 0, 14.6385 ), Transform( -1, 0, -8.74228e-008, 0, 1, 0, 8.74228e-008, 0, -1, 0, 0, 14.6385 ), Transform( 1.94707e-007, 0, -1, 0, 1, 0, 1, 0, 1.94707e-007, 0, 0, 14.6385 ), Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 14.6385 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 15, 22.5, 30, 45, 60 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 14.6385 ), Vector3( 0, 0, 14.6385 ), Vector3( 0, 0, 14.6385 ), Vector3( 0, 0, 14.6385 ), Vector3( 0, 0, 14.6385 ), Vector3( 0, 0, 14.6385 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 15, 22.5, 30, 45, 60 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 90, 0 ), Vector3( 0, 135, 0 ), Vector3( 0, 180, 0 ), Vector3( 0, 270, 0 ), Vector3( 0, 360, 0 ) ]
}

[sub_resource type="Environment" id=3]

background_mode = 1
background_sky_custom_fov = 0.0
background_color = Color( 0.110107, 0, 0.171875, 1 )
background_energy = 0.5
background_canvas_max_layer = 0
ambient_light_color = Color( 0.276418, 0.0686646, 0.351563, 1 )
ambient_light_energy = 0.5
ambient_light_sky_contribution = 1.0
fog_enabled = true
fog_color = Color( 0.578125, 0.124207, 0.571033, 1 )
fog_sun_color = Color( 1, 0.9, 0.7, 1 )
fog_sun_amount = 0.0
fog_depth_enabled = true
fog_depth_begin = 15.0
fog_depth_curve = 1.0
fog_transmit_enabled = false
fog_transmit_curve = 1.0
fog_height_enabled = false
fog_height_min = 0.0
fog_height_max = 100.0
fog_height_curve = 1.0
tonemap_mode = 0
tonemap_exposure = 1.0
tonemap_white = 1.0
auto_exposure_enabled = false
auto_exposure_scale = 0.4
auto_exposure_min_luma = 0.05
auto_exposure_max_luma = 8.0
auto_exposure_speed = 0.5
ss_reflections_enabled = false
ss_reflections_max_steps = 64
ss_reflections_fade_in = 0.15
ss_reflections_fade_out = 2.0
ss_reflections_depth_tolerance = 0.2
ss_reflections_roughness = true
ssao_enabled = false
ssao_radius = 1.0
ssao_intensity = 1.0
ssao_radius2 = 0.0
ssao_intensity2 = 1.0
ssao_bias = 0.01
ssao_light_affect = 0.0
ssao_color = Color( 0, 0, 0, 1 )
ssao_quality = 0
ssao_blur = 3
ssao_edge_sharpness = 4.0
dof_blur_far_enabled = false
dof_blur_far_distance = 10.0
dof_blur_far_transition = 5.0
dof_blur_far_amount = 0.1
dof_blur_far_quality = 1
dof_blur_near_enabled = false
dof_blur_near_distance = 2.0
dof_blur_near_transition = 1.0
dof_blur_near_amount = 0.1
dof_blur_near_quality = 1
glow_enabled = false
glow_levels/1 = false
glow_levels/2 = false
glow_levels/3 = true
glow_levels/4 = false
glow_levels/5 = true
glow_levels/6 = false
glow_levels/7 = false
glow_intensity = 0.8
glow_strength = 1.0
glow_bloom = 0.0
glow_blend_mode = 2
glow_hdr_threshold = 1.0
glow_hdr_scale = 2.0
glow_bicubic_upscale = false
adjustment_enabled = false
adjustment_brightness = 1.0
adjustment_contrast = 1.0
adjustment_saturation = 1.0
_sections_unfolded = [ "Ambient Light" ]

[node name="MainMenu" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Rect" ]

[node name="MainMenuTitle" type="Control" parent="." index="0"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -300.0
margin_right = 127.0
margin_bottom = -233.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="NinePatchRect" type="NinePatchRect" parent="MainMenuTitle" index="0"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -139.5
margin_top = 6.5
margin_right = 139.5
margin_bottom = 529.5
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
_sections_unfolded = [ "Rect" ]

[node name="NinePatchRect2" type="NinePatchRect" parent="MainMenuTitle" index="1"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -215.5
margin_top = -51.5
margin_right = 215.5
margin_bottom = 26.5
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
_sections_unfolded = [ "Rect" ]

[node name="Title" type="Label" parent="MainMenuTitle" index="2"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -193.5
margin_top = -33.5
margin_right = 193.5
margin_bottom = 33.5
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
text = "Bob's Quest"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="Project" type="Label" parent="MainMenuTitle" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -66.0
margin_top = -20.0
margin_right = 134.0
margin_bottom = 17.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 4 )
text = "Project"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="NewGameButton" type="Button" parent="MainMenuTitle" index="4"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -127.5
margin_top = 54.5
margin_right = 126.5
margin_bottom = 97.5
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "New Game"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="LoadGameButton" type="Button" parent="MainMenuTitle" index="5"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -127.5
margin_top = 112.5
margin_right = 126.5
margin_bottom = 155.5
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Load Game"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="ArenaButton" type="Button" parent="MainMenuTitle" index="6"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -127.5
margin_top = 170.5
margin_right = 126.5
margin_bottom = 213.5
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Arena"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="ScoreBoard" type="Button" parent="MainMenuTitle" index="7"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -127.5
margin_top = 228.5
margin_right = 126.5
margin_bottom = 271.5
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Arena Score Board"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="Tutorial" type="Button" parent="MainMenuTitle" index="8"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -127.5
margin_top = 286.5
margin_right = 126.5
margin_bottom = 329.5
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Tutorial"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="OptionsButton" type="Button" parent="MainMenuTitle" index="9"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -127.5
margin_top = 344.5
margin_right = 126.5
margin_bottom = 387.5
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Options"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="CreditsButton" type="Button" parent="MainMenuTitle" index="10"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -127.5
margin_top = 402.5
margin_right = 126.5
margin_bottom = 445.5
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Credits"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="QuitButton" type="Button" parent="MainMenuTitle" index="11"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -127.5
margin_top = 460.5
margin_right = 126.5
margin_bottom = 503.5
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Quit"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="Options" parent="MainMenuTitle" index="12" instance=ExtResource( 5 )]

margin_left = 1920.0
margin_top = 340.0
margin_right = 1920.0
margin_bottom = 340.0

[node name="Credits" parent="MainMenuTitle" index="13" instance=ExtResource( 6 )]

margin_left = -1923.5
margin_top = -273.5
margin_right = -1923.5
margin_bottom = 806.5
_sections_unfolded = [ "Rect" ]

[node name="GameDataDisplay" type="Control" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 50.0
margin_top = 50.0
margin_right = 90.0
margin_bottom = 90.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="TimesCompletedLabel" type="Label" parent="GameDataDisplay" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 375.0
margin_bottom = 37.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 4 )
text = "Times Completed: 1000"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="ArenaOpenLabel" type="Label" parent="GameDataDisplay" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 40.0
margin_right = 375.0
margin_bottom = 77.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 4 )
text = "Times Completed: 1000"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="DirectionalLight" type="DirectionalLight" parent="." index="2"]

transform = Transform( 1, 0, 0, 0, 0.545698, 0.837982, 0, -0.837982, 0.545698, 0, 20.6989, 0 )
visible = false
layers = 1
light_color = Color( 1, 1, 1, 1 )
light_energy = 1.0
light_indirect_energy = 1.0
light_negative = false
light_specular = 0.5
light_bake_mode = 1
light_cull_mask = -1
shadow_enabled = true
shadow_color = Color( 0, 0, 0, 1 )
shadow_bias = 0.1
shadow_contact = 0.0
shadow_reverse_cull_face = false
editor_only = false
directional_shadow_mode = 2
directional_shadow_split_1 = 0.1
directional_shadow_split_2 = 0.2
directional_shadow_split_3 = 0.5
directional_shadow_blend_splits = false
directional_shadow_normal_bias = 0.8
directional_shadow_bias_split_scale = 0.25
directional_shadow_depth_range = 0
directional_shadow_max_distance = 200.0
_sections_unfolded = [ "Shadow" ]

[node name="Castle01ForMenus" parent="." index="3" instance=ExtResource( 7 )]

[node name="CharacterModelHolder" type="Spatial" parent="." index="4"]

editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.04018, 14.7051 )
_sections_unfolded = [ "Transform" ]

[node name="MeshInstance" type="MeshInstance" parent="CharacterModelHolder" index="0"]

transform = Transform( 3, 0, 0, 0, 0.01, 0, 0, 0, 3, 0, 0, 0 )
visible = false
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 1 )
skeleton = NodePath("..")
material/0 = null
_sections_unfolded = [ "Transform" ]

[node name="Player01ForMenus" parent="CharacterModelHolder" index="1" instance=ExtResource( 8 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3.13243 )

[node name="Player02ForMenus" parent="CharacterModelHolder" index="2" instance=ExtResource( 9 )]

transform = Transform( 0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, 2.23192, 0, 2.22047 )

[node name="Player03ForMenus" parent="CharacterModelHolder" index="3" instance=ExtResource( 10 )]

transform = Transform( -4.37114e-008, 0, 1, 0, 1, 0, -1, 0, -4.37114e-008, 3.14334, 0, -0.0620518 )

[node name="Player04ForMenus" parent="CharacterModelHolder" index="4" instance=ExtResource( 11 )]

transform = Transform( -0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, -0.707107, 2.16113, 0, -2.26684 )

[node name="Player05ForMenus" parent="CharacterModelHolder" index="5" instance=ExtResource( 12 )]

transform = Transform( -1, 0, -8.74228e-008, 0, 1, 0, 8.74228e-008, 0, -1, 0, 0, -3.14838 )

[node name="Player06ForMenus" parent="CharacterModelHolder" index="6" instance=ExtResource( 13 )]

transform = Transform( -0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, -0.707107, -2.27133, 0, -2.18303 )

[node name="ModelsOtherHolder" type="Spatial" parent="." index="5"]

editor/display_folded = true

[node name="SorcerorForMenus" parent="ModelsOtherHolder" index="0" instance=ExtResource( 14 )]

transform = Transform( -1, 0, -8.74228e-008, 0, 1, 0, 8.74228e-008, 0, -1, 0, 5.5664, 34 )

[node name="ZombieMaleForMenus" parent="ModelsOtherHolder" index="1" instance=ExtResource( 15 )]

transform = Transform( 0.906308, 0, -0.422618, 0, 1, 0, 0.422618, 0, 0.906308, 5, 1, 5 )

[node name="ZombieMaleForMenus2" parent="ModelsOtherHolder" index="2" instance=ExtResource( 15 )]

transform = Transform( -0.965926, 0, 0.258819, 0, 1, 0, -0.258819, 0, -0.965926, -0.135668, 1, 25.4493 )

[node name="ZombieMaleForMenus3" parent="ModelsOtherHolder" index="3" instance=ExtResource( 15 )]

transform = Transform( -0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, -0.707107, -6.50721, 1, 22.2053 )

[node name="ZombieFemaleForMenus" parent="ModelsOtherHolder" index="4" instance=ExtResource( 16 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 3 )

[node name="ZombieFemaleForMenus2" parent="ModelsOtherHolder" index="5" instance=ExtResource( 16 )]

transform = Transform( -0.984808, 0, -0.173648, 0, 1, 0, 0.173648, 0, -0.984808, 5.13567, 1, 26.5507 )

[node name="ZombieFemaleForMenus3" parent="ModelsOtherHolder" index="6" instance=ExtResource( 16 )]

transform = Transform( -0.939693, 0, 0.34202, 0, 1, 0, -0.34202, 0, -0.939693, -2.49279, 1, 25.7947 )

[node name="CamRotater" type="Spatial" parent="." index="6"]

editor/display_folded = true
transform = Transform( -1, 0, -8.74228e-008, 0, 1, 0, 8.74228e-008, 0, -1, 0, 0, 14.6385 )
_sections_unfolded = [ "Transform" ]

[node name="MainMenuCam" type="Camera" parent="CamRotater" index="0"]

transform = Transform( 1, 0, 0, 0, 0.939693, 0.34202, 0, -0.34202, 0.939693, 0.0200729, 4.65086, 6.62765 )
keep_aspect = 1
cull_mask = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0
doppler_tracking = 0
projection = 0
current = false
fov = 70.0
size = 1.0
near = 0.05
far = 100.0
_sections_unfolded = [ "Transform" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="CamRotater" index="1"]

root_node = NodePath("..")
autoplay = "MainMenuCamAnim"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/MainMenuCamAnim = SubResource( 2 )
blend_times = [  ]

[node name="WorldEnvironment" type="WorldEnvironment" parent="CamRotater" index="2"]

environment = SubResource( 3 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." index="7"]

stream = ExtResource( 17 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = true
mix_target = 0
bus = "MusicBus"

[connection signal="pressed" from="MainMenuTitle/NewGameButton" to="." method="_on_NewGameButton_pressed"]

[connection signal="pressed" from="MainMenuTitle/LoadGameButton" to="." method="_on_LoadGameButton_pressed"]

[connection signal="pressed" from="MainMenuTitle/ArenaButton" to="." method="_on_ArenaButton_pressed"]

[connection signal="pressed" from="MainMenuTitle/ScoreBoard" to="." method="_on_ScoreBoard_pressed"]

[connection signal="pressed" from="MainMenuTitle/Tutorial" to="." method="_on_Tutorial_pressed"]

[connection signal="pressed" from="MainMenuTitle/OptionsButton" to="." method="_on_OptionsButton_pressed"]

[connection signal="pressed" from="MainMenuTitle/CreditsButton" to="." method="_on_CreditsButton_pressed"]

[connection signal="pressed" from="MainMenuTitle/QuitButton" to="." method="_on_QuitButton_pressed"]


